zokrates_cli/examples/compile_errors/wrong_member_type.zok
struct B {
    field a;
}

struct A {
    B a;
}

def main() {
    A a = A {
        a: B {
            a: false
        }
    };
    return;
}
